--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- navbar -->
     <nav class="navbar  navbar-expand-lg bg-light">
         <div class="container">
-            <img class="logo" src="/images/logo.jpg" alt="logo">
+            <img class="logo" src="logo.jpg" alt="logo">
             <a class="navbar-brand" href="#"> <strong> HIKING</strong></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -58,14 +58,14 @@
             </div>
         </div>
         <div class="img" id="img1">
-            <img src="/images/profile1.jpg" alt="img">
+            <img src="profile1.jpg" alt="img">
         </div>
     </div>
     <!-- section 2 -->
     <div class="container my-5 d-flex section2">
 
         <div class="location my-5 mx-5">
-            <img class="mx-auto" src="/images/location.png" alt="location">
+            <img class="mx-auto" src="location.png" alt="location">
             <h5>Secret Locations</h5>
             <paragraph>Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Tenetur <br> voluptate nam
                 eius.
@@ -73,7 +73,7 @@
             <p><u> Read More</u></p>
         </div>
         <div class="location my-5 mx-5">
-            <img class="mx-auto" src="/images/shoes.jpg" alt="location">
+            <img class="mx-auto" src="shoes.jpg" alt="location">
             <h5>Secret Locations</h5>
             <paragraph>Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Tenetur <br> voluptate nam
                 eius.
@@ -81,7 +81,7 @@
             <p><u>Read More</u></p>
         </div>
         <div class="location my-5 mx-5">
-            <img class="mx-auto" src="/images/card.jpg" alt="location">
+            <img class="mx-auto" src="card.jpg" alt="location">
             <h5>Secret Locations</h5>
             <paragraph>Lorem ipsum dolor sit amet <br> consectetur adipisicing elit. Tenetur <br> voluptate nam
                 eius.
@@ -97,7 +97,7 @@
     <!-- section 4 -->
     <div class="container d-flex section4 my-4">
         <div id="image2" class="image">
-            <img src="/images/image2.jpg" alt="image2">
+            <img src="image2.jpg" alt="image2">
         </div>
         <div class="info">
             <h1>safe, <br> Affordable, And <br> Trusted</h1>
@@ -111,13 +111,13 @@
         Safe Journey
         <h3>Trusted by Big Companies</h3>
         <div id="partner">
-            <img src="/images/traveladvisors.jpg" alt="">
-            <img src="/images/unitedtravel.jpg" alt="">
-            <img src="/images/travelchannel.jpg" alt="">
+            <img src="traveladvisors.jpg" alt="">
+            <img src="unitedtravel.jpg" alt="">
+            <img src="travelchannel.jpg" alt="">
         </div>
         <div id="partner2">
-            <img src="/images/tripraja.jpg" alt="">
-            <img id="booking" src="/images/booking.com.jpg" alt="">
+            <img src="tripraja.jpg" alt="">
+            <img id="booking" src="booking.com.jpg" alt="">
         </div>
 
 
@@ -135,14 +135,14 @@
             <button type="button" class="btn btn-primary">Contact Us</button>
         </div>
         <div id="content">
-            <img src="/images/image3.jpg" alt="">
+            <img src="image3.jpg" alt="">
         </div>
     </div>
 
     <!-- section 6 -->
     <div class="container section6">
         <div id="content1">
-            <img src="/images/image4.jpg" alt="">
+            <img src="image4.jpg" alt="">
         </div>
         <div id="section6">
             <h1>Enjoy Your Life <br> With Us Now!</h1>
@@ -280,14 +280,14 @@
         <div class="d-flex">
             <div class="lower">
                 <div class="part1">
-                    <img src="/images/bg.jpg" alt="">
+                    <img src="bg.jpg" alt="">
                     <h1>HIGHKING</h1>
                 </div>
                 <paragraph>We envision a world where <br>everyone feels welsome in the <br>american hiking community
                 </paragraph><br><br>
-                <img src="/images/f.jpg" alt="">
-                <img src="/images/twitter.jpg" alt="">
-                <img src="/images/ista.jpg" alt="">
+                <img src="f.jpg" alt="">
+                <img src="twitter.jpg" alt="">
+                <img src="ista.jpg" alt="">
             </div>
 
             <div class="menu">
